// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createPollPdfContentTable > should generate table for "byName" with groups 1`] = `
[
  [
    {
      "table": {
        "body": [
          [
            {
              "columns": [
                {
                  "canvas": [
                    {
                      "color": "#ff0000",
                      "r1": 15,
                      "r2": 15,
                      "type": "ellipse",
                      "x": 15,
                      "y": 15,
                    },
                  ],
                  "width": 33,
                },
                {
                  "relativePosition": {
                    "y": 7.777777777777778,
                  },
                  "style": {
                    "alignment": "left",
                    "bold": true,
                    "fontSize": 13,
                  },
                  "text": "Group 1",
                },
              ],
            },
            {
              "style": "tableHeader",
              "text": "Yes
1",
              "type": "none",
            },
            {
              "style": "tableHeader",
              "text": "No
0",
              "type": "none",
            },
            {
              "style": "tableHeader",
              "text": "Invalid
1",
              "type": "none",
            },
          ],
          [
            {
              "style": {
                "alignment": "left",
              },
              "text": "Name of @user-1",
            },
            {
              "style": "tableBody",
              "text": "X",
            },
            {
              "style": "tableBody",
              "text": "",
            },
            {
              "style": "tableBody",
              "text": "",
            },
          ],
          [
            {
              "style": {
                "alignment": "left",
              },
              "text": "Name of @user-2",
            },
            {
              "style": "tableBody",
              "text": "",
            },
            {
              "style": "tableBody",
              "text": "",
            },
            {
              "style": "tableBody",
              "text": "X",
            },
          ],
        ],
        "headerRows": 1,
        "heights": 18,
        "widths": [
          "66%",
          "10%",
          "10%",
          "14%",
        ],
      },
    },
    {
      "table": {
        "body": [
          [
            {
              "columns": [
                {
                  "canvas": [
                    {
                      "color": "#0000ff",
                      "r1": 15,
                      "r2": 15,
                      "type": "ellipse",
                      "x": 15,
                      "y": 15,
                    },
                  ],
                  "width": 33,
                },
                {
                  "relativePosition": {
                    "y": 7.777777777777778,
                  },
                  "style": {
                    "alignment": "left",
                    "bold": true,
                    "fontSize": 13,
                  },
                  "text": "Group 2",
                },
              ],
            },
            {
              "style": "tableHeader",
              "text": "Yes
0",
              "type": "none",
            },
            {
              "style": "tableHeader",
              "text": "No
1",
              "type": "none",
            },
            {
              "style": "tableHeader",
              "text": "Invalid
0",
              "type": "none",
            },
          ],
          [
            {
              "style": {
                "alignment": "left",
              },
              "text": "Name of @user-3",
            },
            {
              "style": "tableBody",
              "text": "",
            },
            {
              "style": "tableBody",
              "text": "X",
            },
            {
              "style": "tableBody",
              "text": "",
            },
          ],
        ],
        "headerRows": 1,
        "heights": 18,
        "widths": [
          "66%",
          "10%",
          "10%",
          "14%",
        ],
      },
    },
    {
      "table": {
        "body": [
          [
            {
              "columns": [
                {
                  "canvas": [
                    {
                      "color": "#ffaaff",
                      "r1": 15,
                      "r2": 15,
                      "type": "ellipse",
                      "x": 15,
                      "y": 15,
                    },
                  ],
                  "width": 33,
                },
                {
                  "relativePosition": {
                    "y": 7.777777777777778,
                  },
                  "style": {
                    "alignment": "left",
                    "bold": true,
                    "fontSize": 13,
                  },
                  "text": "Group 3",
                },
              ],
            },
            {
              "style": "tableHeader",
              "text": "Yes
0",
              "type": "none",
            },
            {
              "style": "tableHeader",
              "text": "No
0",
              "type": "none",
            },
            {
              "style": "tableHeader",
              "text": "Invalid
0",
              "type": "none",
            },
          ],
          [
            {
              "colSpan": 4,
              "style": {
                "alignment": "center",
              },
              "text": "No votes were cast.",
            },
          ],
        ],
        "headerRows": 1,
        "heights": 18,
        "widths": [
          "66%",
          "10%",
          "10%",
          "14%",
        ],
      },
    },
  ],
]
`;

exports[`createPollPdfContentTable > should generate table for "byName" without groups 1`] = `
[
  {
    "table": {
      "body": [
        [
          {
            "color": "black",
            "fillColor": "white",
            "style": {
              "alignment": "left",
              "bold": true,
              "fontSize": 13,
              "margin": [
                0,
                5,
                0,
                0,
              ],
            },
            "text": "",
          },
          {
            "color": "black",
            "fillColor": "white",
            "style": "tableHeader",
            "text": "Yes
1",
            "type": "none",
          },
          {
            "color": "black",
            "fillColor": "white",
            "style": "tableHeader",
            "text": "No
1",
            "type": "none",
          },
          {
            "color": "black",
            "fillColor": "white",
            "style": "tableHeader",
            "text": "Invalid
1",
            "type": "none",
          },
        ],
        [
          {
            "style": {
              "alignment": "left",
            },
            "text": "Name of @user-1",
          },
          {
            "style": "tableBody",
            "text": "X",
          },
          {
            "style": "tableBody",
            "text": "",
          },
          {
            "style": "tableBody",
            "text": "",
          },
        ],
        [
          {
            "style": {
              "alignment": "left",
            },
            "text": "Name of @user-2",
          },
          {
            "style": "tableBody",
            "text": "",
          },
          {
            "style": "tableBody",
            "text": "",
          },
          {
            "style": "tableBody",
            "text": "X",
          },
        ],
        [
          {
            "style": {
              "alignment": "left",
            },
            "text": "Name of @user-3",
          },
          {
            "style": "tableBody",
            "text": "",
          },
          {
            "style": "tableBody",
            "text": "X",
          },
          {
            "style": "tableBody",
            "text": "",
          },
        ],
      ],
      "headerRows": 1,
      "heights": 18,
      "widths": [
        "66%",
        "10%",
        "10%",
        "14%",
      ],
    },
  },
]
`;

exports[`createPollPdfContentTable > should generate table for "open" with groups 1`] = `
[
  [
    [
      {
        "table": {
          "body": [
            [
              {
                "columns": [
                  {
                    "canvas": [
                      {
                        "color": "#ff0000",
                        "r1": 15,
                        "r2": 15,
                        "type": "ellipse",
                        "x": 15,
                        "y": 15,
                      },
                    ],
                    "width": 33,
                  },
                  {
                    "relativePosition": {
                      "y": 7.777777777777778,
                    },
                    "style": {
                      "alignment": "left",
                      "bold": true,
                      "fontSize": 13,
                    },
                    "text": "Group 1",
                  },
                ],
              },
              {
                "style": "tableHeader",
                "text": "Yes
1",
                "type": "none",
              },
              {
                "style": "tableHeader",
                "text": "No
0",
                "type": "none",
              },
              {
                "style": "tableHeader",
                "text": "Invalid
1",
                "type": "none",
              },
            ],
          ],
          "headerRows": 1,
          "heights": 18,
          "widths": [
            "66%",
            "10%",
            "10%",
            "14%",
          ],
        },
      },
      {
        "table": {
          "body": [
            [
              {
                "columns": [
                  {
                    "canvas": [
                      {
                        "color": "#0000ff",
                        "r1": 15,
                        "r2": 15,
                        "type": "ellipse",
                        "x": 15,
                        "y": 15,
                      },
                    ],
                    "width": 33,
                  },
                  {
                    "relativePosition": {
                      "y": 7.777777777777778,
                    },
                    "style": {
                      "alignment": "left",
                      "bold": true,
                      "fontSize": 13,
                    },
                    "text": "Group 2",
                  },
                ],
              },
              {
                "style": "tableHeader",
                "text": "Yes
0",
                "type": "none",
              },
              {
                "style": "tableHeader",
                "text": "No
1",
                "type": "none",
              },
              {
                "style": "tableHeader",
                "text": "Invalid
0",
                "type": "none",
              },
            ],
          ],
          "headerRows": 1,
          "heights": 18,
          "widths": [
            "66%",
            "10%",
            "10%",
            "14%",
          ],
        },
      },
      {
        "table": {
          "body": [
            [
              {
                "columns": [
                  {
                    "canvas": [
                      {
                        "color": "#ffaaff",
                        "r1": 15,
                        "r2": 15,
                        "type": "ellipse",
                        "x": 15,
                        "y": 15,
                      },
                    ],
                    "width": 33,
                  },
                  {
                    "relativePosition": {
                      "y": 7.777777777777778,
                    },
                    "style": {
                      "alignment": "left",
                      "bold": true,
                      "fontSize": 13,
                    },
                    "text": "Group 3",
                  },
                ],
              },
              {
                "style": "tableHeader",
                "text": "Yes
0",
                "type": "none",
              },
              {
                "style": "tableHeader",
                "text": "No
0",
                "type": "none",
              },
              {
                "style": "tableHeader",
                "text": "Invalid
0",
                "type": "none",
              },
            ],
          ],
          "headerRows": 1,
          "heights": 18,
          "widths": [
            "66%",
            "10%",
            "10%",
            "14%",
          ],
        },
      },
    ],
  ],
]
`;
